--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="60dp"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="64dp"
                     android:text="Fastest Delivery"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -47,7 +47,7 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="68dp"
+                    android:layout_marginTop="52dp"
                     android:layout_marginEnd="92dp"
                     android:text="In Your Area"
                     android:textColor="@color/white"
@@ -65,8 +65,8 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="100dp"
-                    android:layout_marginBottom="28dp"
+                    android:layout_marginEnd="104dp"
+                    android:layout_marginBottom="40dp"
                     android:background="@drawable/banner_button"
                     android:padding="10dp"
                     android:text="Order Now"
@@ -76,6 +76,20 @@
                     app:layout_constraintEnd_toEndOf="@+id/imageView3"
                     app:layout_goneMarginEnd="8dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/search_box"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginTop="10dp"
+                android:drawableStart="@drawable/search_logo"
+                android:paddingStart="20dp"
+                android:drawablePadding="10dp"
+                android:hint="Search Your Food"
+                >
+
+            </EditText>
 
 
         </LinearLayout>
