--- a/app/src/main/res/drawable/menu_item_background.xml
+++ b/app/src/main/res/drawable/menu_item_background.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="5dp"/>
-    <solid android:color="#C5C2C1"/>
+    <solid android:color="@color/white"/>
 
 </shape>
