--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -28,6 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,7 +50,7 @@
                             android:id="@+id/textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="32dp"
+                            android:layout_marginTop="28dp"
                             android:layout_marginEnd="44dp"
                             android:text="Fastest Delivery"
                             android:textColor="@color/white"
@@ -61,7 +63,7 @@
                             android:id="@+id/textView3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="64dp"
+                            android:layout_marginTop="58dp"
                             android:layout_marginEnd="60dp"
                             android:text="In Your Area"
                             android:textColor="@color/white"
@@ -79,8 +81,8 @@
                             android:id="@+id/textView4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="52dp"
                             android:layout_marginEnd="64dp"
-                            android:layout_marginBottom="28dp"
                             android:background="@drawable/banner_button"
                             android:padding="10dp"
                             android:text="Order Now"
@@ -88,10 +90,12 @@
                             android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/imageView3"
+                            app:layout_constraintTop_toTopOf="parent"
                             app:layout_goneMarginEnd="8dp" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <EditText
+                        android:id="@+id/searchBtn"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginLeft="18dp"
@@ -100,7 +104,9 @@
                         android:background="@drawable/search_box"
                         android:drawableStart="@drawable/search_logo"
                         android:drawablePadding="10dp"
+                        android:maxLines="1"
                         android:hint="Search Your Food"
+                        android:drawableEnd="@drawable/search_logo"
                         android:paddingStart="20dp">
 
                     </EditText>
@@ -123,14 +129,13 @@
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        >
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="15dp"
                             android:layout_marginLeft="8dp"
+                            android:layout_marginTop="15dp"
 
                             android:orientation="horizontal">
 
@@ -238,8 +243,6 @@
                     </HorizontalScrollView>
 
 
-
-
                     <TextView
                         android:id="@+id/Menu"
                         android:layout_width="match_parent"
@@ -260,8 +263,7 @@
                         android:id="@+id/menuRecycleView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="70dp"
-                        >
+                        android:layout_marginBottom="70dp">
 
                     </androidx.recyclerview.widget.RecyclerView>
 
@@ -285,6 +287,7 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/background"
             android:foregroundGravity="bottom"
             android:layout_alignParentBottom="true"
             app:layout_constraintBottom_toBottomOf="parent"
