--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#FFFF5E0E</color>
+    <color name="background">#F5F5F5</color>
+    <color name="border">#DDDDDD</color>
 
 </resources>
